# zyre_base

./: .dockerignore  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  requirements.txt  setup.py
.gitlab/merge_request_templates/: template.md
pyre_base/: base_class.py  zyre_params.py
pyre_communicator/pyre_communicator/: PyreCommunicator.py  base_class.py  zyre_params.py
zyre_base/: CMakeLists.txt
zyre_base/include/: ZyreBase.h
zyre_base/src/: ZyreBase.cpp
zyre_base/test/: ZyreBaseTest.cpp
zyre_base/test/chatter/: chat.c  chatter
zyre_communicator/: CMakeLists.txt
zyre_communicator/include/: ZyreBaseCommunicator.h
zyre_communicator/src/: ZyreBaseCommunicator.cpp
zyre_communicator/test/: CCUtest.cpp
zyre_communicator/test/chatter/: Makefile  create_10_shouters.sh
